--- a/staddit/stad/templates/index.html
+++ b/staddit/stad/templates/index.html
@@ -5,6 +5,13 @@
 
 {% block atitle %}Home Page{% endblock %}
 
+{% block navbar %}
+              <li><a href="/#">Home</a></li>
+              <li class="active"><a href="/subred">Subreddits</a></li>
+              <li><a href="/user">Redditors</a></li>
+              <li><a href="/viz">Vizualizations</a></li>
+{% endblock %}
+
 {% block content %}
 
 
