--- a/staddit/stad/templates/layout/layout.html
+++ b/staddit/stad/templates/layout/layout.html
@@ -28,10 +28,12 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+              {% block navbar %}
               <li class="active"><a href="/#">Home</a></li>
               <li><a href="/subred">Subreddits</a></li>
               <li><a href="/user">Redditors</a></li>
               <li><a href="/viz">Vizualizations</a></li>
+              {% endblock %}
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container -->
