--- a/staddit/stad/templates/subredresult.html
+++ b/staddit/stad/templates/subredresult.html
@@ -1,10 +1,29 @@
 {% extends 'layout/layout.html' %}
 {% load django_tables2 %}
+<!DOCTYPE html>
+
 {% block atitle %}Home Page{% endblock %}
 
+{% block navbar %}
+              <li><a href="/#">Home</a></li>
+              <li class="active"><a href="/subred">Subreddits</a></li>
+              <li><a href="/user">Redditors</a></li>
+              <li><a href="/viz">Vizualizations</a></li>
+{% endblock %}
+
 {% block content %}
-<form method = 'POST' action = ''>{% csrf_token %}
-    {{form}}
-    <input type = 'submit' value = 'query' />
-</form>
+
+<div class="jumbotron">
+     <div class="container">
+        <h1>Welcome to Staddit!</h1>
+        <p>Explore the thousands of Reddit communities available. From /r/astrology to /r/zen, we have an extensive collection of comments within these subreddits. From any subreddit you specify, you can view general information about all the comments posted there such as the user, body, and score that the comment received. For any given user, you can see the comments they have posted and to where they have posted. Additionally you can see a visualization of the similarity of subreddit preferences among users.</p>
+        <p><form method = 'POST' action = ''>
+            {% csrf_token %}{{form}}
+            <input type = 'submit' value = 'Search' /></form>
+        </p>
+     </div>
+</div>
+
+{% render_table table %}
+
 {% endblock %}
