--- a/staddit/stad/templates/layout/layout.html
+++ b/staddit/stad/templates/layout/layout.html
@@ -16,7 +16,7 @@
 	<body>
 
 	<nav class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -49,4 +49,9 @@
 		{% block content %}
 		{% endblock %}
 	</body>
+  <div class="container-fluid">
+    <footer class="footer" align="right">
+          <p>Compsci 316 Spring 2017</p>
+    </footer>
+  </div>
 </html>
