--- a/staddit/stad/templates/usearch.html
+++ b/staddit/stad/templates/usearch.html
@@ -1,8 +1,28 @@
 {% extends 'layout/layout.html' %}
 {% load django_tables2 %}
+<!DOCTYPE html>
 
-{% block atitle %}User{% endblock %}
+{% block atitle %}Redditors{% endblock %}
+
+{% block navbar %}
+              <li><a href="/#">Home</a></li>
+              <li><a href="/subred">Subreddits</a></li>
+              <li class="active"><a href="/user">Redditors</a></li>
+              <li><a href="/viz">Vizualizations</a></li>
+{% endblock %}
 
 {% block content %}
-{% render_table table %}
-{% end block %}
+
+<div class="jumbotron" align = "center">
+     <div class="container">
+        <h1><font size = "8">Search for a User</font></h1>
+        <p><form method = 'POST' action = ''>
+        	<label for="author">/u/</label>
+            {% csrf_token %}<input type = "text" name = "author" placeholder = "user">
+            <!-- {% csrf_token %}{{form}} -->
+            <input type = 'submit' value = 'Search' /></form>
+        </p>
+     </div>
+</div>
+
+{% endblock %}
