--- a/staddit/stad/templates/about.html
+++ b/staddit/stad/templates/about.html
@@ -1,15 +1,23 @@
-<!-- stad/templates/about.html -->
+{% extends 'layout/layout.html' %}
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Howdy!</title>
-    </head>
-    <body>
-        <h1>Welcome to the about page</h1>
-    <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis neque ex. Donec feugiat egestas dictum. In eget erat sit amet elit pellentesque convallis nec vitae turpis. Vivamus et molestie nisl. Aenean non suscipit velit. Nunc eleifend convallis consectetur. Phasellus ornare dolor eu mi vestibulum, ornare tempus lacus imperdiet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque ut sem ligula. Mauris volutpat vestibulum dui in cursus. Donec aliquam orci pellentesque, interdum neque sit amet, vulputate purus. Quisque volutpat cursus nisl, in volutpat velit lacinia id. Maecenas id felis diam. 
-    </p>
-    <a href="/">Go back home</a>
-    </body>
-</html>
+
+{% block atitle %}About Staddit{% endblock %}
+
+{% block navbar %}
+              <li><a href="/#">Home</a></li>
+              <li><a href="/subred">Subreddits</a></li>
+              <li><a href="/user">Redditors</a></li>
+              <li><a href="/viz">Vizualizations</a></li>
+{% endblock %}
+
+{% block content %}
+<div class="container-fluid">
+    <div class="page-header" align="center">
+        <h1><font size = "8">What's Staddit?</font></h1>
+    </div><br>
+    <div class="container">
+        <p><font size="4">This is where the about us goes</font></p>
+    </div>
+</div>
+
+{% endblock %}
