--- a/staddit/stad/templates/layout/layout.html
+++ b/staddit/stad/templates/layout/layout.html
@@ -24,7 +24,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Staddit</a>
+            <a class="navbar-brand" href="/about">Staddit</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
