--- a/staddit/stad/templates/visual.html
+++ b/staddit/stad/templates/visual.html
@@ -7,16 +7,16 @@
               <li><a href="/#">Home</a></li>
               <li><a href="/subred">Subreddits</a></li>
               <li><a href="/user">Redditors</a></li>
-              <li><a href="/viz">Vizualizations</a></li>
+              <li class="active"><a href="/viz">Vizualizations</a></li>
 {% endblock %}
 
 {% block content %}
 <div class="container-fluid">
     <div class="page-header" align="center">
-        <h1><font size = "8">What's Staddit?</font></h1>
+        <h1><font size = "8">Visualization</font></h1>
     </div><br>
-    <div class="container">
-        <p><font size="4">This is where the about us goes</font></p>
+    <div class="container" align="center">
+      <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/17156084_245817915883200_2048997821296092030_n.jpg?oh=83879dcd592a60d71a99098cbe386446&oe=598B9A56"/>
     </div>
 </div>
 
